--- a/src/siene/shop/shop/shop.component.html
+++ b/src/siene/shop/shop/shop.component.html
@@ -4,18 +4,21 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 15:13:01
+ * @LastEditTime: 2021-09-23 14:11:22
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
-    <div class="coinShop" *ngIf="showCoinShop">
+    <div class="singleShop" *ngIf="showCoinShop">
         <app-image [imgData]="coinBg"></app-image>
         <app-image [imgData]="coinIcon"></app-image>
         <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(true)"></app-image-button>
-        <app-image-button [imgData]="vipIcon"  (itemClick)="showVip()"></app-image-button>
         <app-bank-scroll-list [listHeight]="pageHeight - 660" [listData]="bankItemDatas" [textureData]="textureData"></app-bank-scroll-list>
     </div>
-    <div class="ticketShop" *ngIf="!showCoinShop">
+    <div class="singleShop" *ngIf="!showCoinShop">
+        <app-image [imgData]="vipBg"></app-image>
+        <app-image [imgData]="vipIcon"></app-image>
+    </div>
+    <div class="singleShop" *ngIf="!showCoinShop">
         <app-image [imgData]="ticketBg"></app-image>
         <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(false)"></app-image-button>
         <app-image [imgData]="ticketIcon"></app-image>
