--- a/src/siene/shop/shop/shop.component.html
+++ b/src/siene/shop/shop/shop.component.html
@@ -4,23 +4,27 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-23 14:22:02
+ * @LastEditTime: 2021-09-23 14:38:01
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
     <div class="singleShop" *ngIf="showCoinShop">
         <app-image [imgData]="coinBg"></app-image>
         <app-image [imgData]="coinIcon"></app-image>
-        <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(true)"></app-image-button>
+        <app-image-button [imgData]="vipBtn" (itemClick)="switchShop(2)"></app-image-button>
+        <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(3)"></app-image-button>
         <app-bank-scroll-list [listHeight]="pageHeight - 340" [listData]="bankItemDatas" [textureData]="textureData"></app-bank-scroll-list>
     </div>
-    <div class="singleShop" *ngIf="!showCoinShop">
+    <div class="singleShop" *ngIf="showVipShop">
         <app-image [imgData]="vipBg"></app-image>
+        <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(1)"></app-image-button>
         <app-image [imgData]="vipIcon"></app-image>
+        <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(3)"></app-image-button>
     </div>
-    <div class="singleShop" *ngIf="!showCoinShop">
+    <div class="singleShop" *ngIf="showExchangeShop">
         <app-image [imgData]="ticketBg"></app-image>
-        <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(false)"></app-image-button>
+        <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(1)"></app-image-button>
+        <app-image-button [imgData]="vipBtn" (itemClick)="switchShop(2)"></app-image-button>
         <app-image [imgData]="ticketIcon"></app-image>
         <app-ticket-scroll-list [listHeight]="pageHeight - 330" [listData]="ticketItemDatas | slice : 0 : pageSize" [textureData]="textureData"></app-ticket-scroll-list>
     </div>
