--- a/src/siene/shop/shop/shop.component.html
+++ b/src/siene/shop/shop/shop.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-23 14:38:01
+ * @LastEditTime: 2021-09-23 15:42:47
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
@@ -20,6 +20,7 @@
         <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(1)"></app-image-button>
         <app-image [imgData]="vipIcon"></app-image>
         <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(3)"></app-image-button>
+        <app-vip-level-list [listData]="vipItemDatas" [textureData]="textureData"></app-vip-level-list>
     </div>
     <div class="singleShop" *ngIf="showExchangeShop">
         <app-image [imgData]="ticketBg"></app-image>
