--- a/src/siene/shop/vip-level-list/vip-level-list.component.html
+++ b/src/siene/shop/vip-level-list/vip-level-list.component.html
@@ -4,15 +4,20 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-23 16:14:29
+ * @LastEditTime: 2021-09-23 17:53:26
 -->
 <div class="vipLevelBar">
   <app-image [imgData]="lightImg"></app-image>
-  <app-image [imgData]="vip1"></app-image>
-  <app-image [imgData]="vip2"></app-image>
-  <app-image [imgData]="vip3"></app-image>
+  <app-image-button [imgData]="vip1" (itemClick)="switchVip(0)"></app-image-button>
+  <app-image-button [imgData]="vip2" (itemClick)="switchVip(1)"></app-image-button>
+  <app-image-button [imgData]="vip3" (itemClick)="switchVip(2)"></app-image-button>
   <app-image [imgData]="textBg"></app-image>
   <app-image [imgData]="crown"></app-image>
   <app-image [imgData]="hand"></app-image>
   <app-image-button [imgData]="buyBtn" (itemClick)="buyVip()"></app-image-button>
+  <div class="textShadow">
+    <app-popup-text-field [textData]="titleText" [text]="titleString"></app-popup-text-field>
+  </div>
+  <div class="tipText"></div>
+  <app-popup-text-field [textData]="priceText" [text]="priceString"></app-popup-text-field>
 </div>
