--- a/src/siene/shop/vip-level-list/vip-level-list.component.css
+++ b/src/siene/shop/vip-level-list/vip-level-list.component.css
@@ -1,6 +1,7 @@
-.vipLevelBar{
+.scrollBar{
     top: 80px;
     width: 730px;
+    overflow: hidden;
 }
 .textShadow{
     text-shadow: 2px 2px 4px #333333;
@@ -8,6 +9,7 @@
 .tipText{
     left: 45px;
     top: 320px;
+    width: 730px;
     text-align: left;
     font-size: 35px;
     line-height: 56px;
