--- a/src/siene/shop/vip-level-list/vip-level-list.component.html
+++ b/src/siene/shop/vip-level-list/vip-level-list.component.html
@@ -4,18 +4,18 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-24 13:52:24
+ * @LastEditTime: 2021-09-24 14:53:52
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
     <app-image [imgData]="lightImg"></app-image>
-    <app-image-button [imgData]="vip1" (itemClick)="switchVip(0)"></app-image-button>
-    <app-image-button [imgData]="vip2" (itemClick)="switchVip(1)"></app-image-button>
-    <app-image-button [imgData]="vip3" (itemClick)="switchVip(2)"></app-image-button>
+    <app-scroll-list-button [imgData]="vip1" (itemClick)="onItemClick(0)"></app-scroll-list-button>
+    <app-scroll-list-button [imgData]="vip2" (itemClick)="onItemClick(1)"></app-scroll-list-button>
+    <app-scroll-list-button [imgData]="vip3" (itemClick)="onItemClick(2)"></app-scroll-list-button>
     <app-image [imgData]="textBg"></app-image>
     <app-image [imgData]="crown"></app-image>
     <app-image [imgData]="hand"></app-image>
-    <app-image-button [imgData]="buyBtn" (itemClick)="buyVip()"></app-image-button>
+    <app-scroll-list-button [imgData]="buyBtn" (itemClick)="onItemClick('buyVip')"></app-scroll-list-button>
     <div class="textShadow">
       <app-popup-text-field [textData]="titleText" [text]="titleString"></app-popup-text-field>
     </div>
