--- a/src/siene/shop/vip-level-list/vip-level-list.component.html
+++ b/src/siene/shop/vip-level-list/vip-level-list.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-24 14:53:52
+ * @LastEditTime: 2021-09-27 15:49:13
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
@@ -15,11 +15,16 @@
     <app-image [imgData]="textBg"></app-image>
     <app-image [imgData]="crown"></app-image>
     <app-image [imgData]="hand"></app-image>
-    <app-scroll-list-button [imgData]="buyBtn" (itemClick)="onItemClick('buyVip')"></app-scroll-list-button>
     <div class="textShadow">
       <app-popup-text-field [textData]="titleText" [text]="titleString"></app-popup-text-field>
     </div>
     <div class="tipText"></div>
-    <app-popup-text-field [textData]="priceText" [text]="priceString"></app-popup-text-field>
+    <div [hidden]="showEndTime">
+      <app-scroll-list-button [imgData]="buyBtn" (itemClick)="onItemClick('buyVip')"></app-scroll-list-button>
+      <app-popup-text-field [textData]="priceText" [text]="priceString"></app-popup-text-field>
+    </div>
+    <div [hidden]="!showEndTime">
+      <app-popup-text-field [textData]="vipLeftText" [text]="vipTimeStr"></app-popup-text-field>
+    </div>
   </div>
 </div>
