--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -4,12 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-28 15:56:02
+ * @LastEditTime: 2021-09-29 09:53:53
 -->
 <div class="banner" (click)="bennerClick()" [@carousel]="carouselState">
   <img [src]="item.art" class="bannerPic" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
 </div>
 <app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="activeIndex"></app-active-index-point>
-<div class="touchBar" *ngIf="showTouchBar">
-  
-</div>
+<app-touchbar *ngIf="showTouchBar" [rect]="touchBarRect"></app-touchbar>
