--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-29 09:53:53
+ * @LastEditTime: 2021-10-08 10:57:33
 -->
 <div class="banner" (click)="bennerClick()" [@carousel]="carouselState">
   <img [src]="item.art" class="bannerPic" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
 </div>
 <app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="activeIndex"></app-active-index-point>
-<app-touchbar *ngIf="showTouchBar" [rect]="touchBarRect"></app-touchbar>
+<app-touchDragBar *ngIf="showTouchBar" [rect]="touchBarRect"></app-touchDragBar>
