--- a/src/siene/lobby/lobby/lobby.component.html
+++ b/src/siene/lobby/lobby/lobby.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-24 13:22:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 16:17:32
+ * @LastEditTime: 2021-10-12 12:52:11
 -->
 <app-banner></app-banner>
-<app-product-list [categoryList]="categorys" [pageHeight]="pageHeight"  (itemClick)="onProductItemClick($event)"></app-product-list>
+<app-product-list [textureData]="textureData" [categoryList]="categorys" [pageHeight]="pageHeight"  (itemClick)="onProductItemClick($event)"></app-product-list>
 <app-head-bar></app-head-bar>
 <app-bottom-bar></app-bottom-bar>
