--- a/src/siene/my/contact-us/contact-us.component.css
+++ b/src/siene/my/contact-us/contact-us.component.css
@@ -6,23 +6,22 @@
 }
 .leftText{
     left: 40px;
-    top: 250px;
 }
-.inputArea{
+.inputTextArea{
     left: 300px;
     top: 250px;
     width: 250px;
     font-size: 45px;
 }
-.input{
-    height: 50px;
-    width: 250px;
+.inputText{
+    position: absolute;
+    left: 155px;
+    height: 90px;
+    width: 518px;
     font-size: 45px;
     border:none;
+    outline: none;
     background-color: transparent;
-}
-.input:focus{
-    border:none;
 }
 .checkbox{
     height: 50px;
