--- a/src/siene/my/contact-us/contact-us.component.html
+++ b/src/siene/my/contact-us/contact-us.component.html
@@ -4,22 +4,22 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-12 11:32:06
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-13 11:15:33
+ * @LastEditTime: 2021-10-13 13:05:54
 -->
 <div class="contactUsPage" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
-  <app-image [imgData]="title"></app-image>
-  <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
+  <div [style.top]="pageTop+'px'">
+    <app-image [imgData]="title"></app-image>
+    <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
+  </div>
   <app-image-button [imgData]="submitBtn" (itemClick)="submit()"></app-image-button>
   <form [formGroup]="formReportItems" (ngSubmit)="onSubmit()">
-    <div class="leftText">
+    <div class="leftText" [style.top]="pageMiddle+'px'">
       <app-popup-text-field [textData]="emailText" [text]="'Email'"></app-popup-text-field>
       <app-popup-text-field [textData]="nameText" [text]="'Name'"></app-popup-text-field>
       <app-image [imgData]="inputBg1"></app-image>
       <app-image [imgData]="inputBg2"></app-image>
-    </div>
-    <div class="inputArea">
-      <p><input type="text" class="input" formControlName="emailAddress" id="emailTextInput"></p>
-      <p><input type="text" class="input" formControlName="userName" id="nameTextInput"></p>
+      <input type="text" class="inputText" formControlName="emailAddress" id="emailTextInput" [style.top]="'0px'">
+      <input type="text" class="inputText" formControlName="userName" id="nameTextInput"  [style.top]="'100px'">
     </div>
     <div class="choise">
       <p style="text-align: center;">saddadasdsad</p>
@@ -28,7 +28,7 @@
       <p><input type="checkbox" class="checkbox">sfsfasad</p>
       <p><input type="checkbox" class="checkbox">sfasfsaf</p>
       <p>sfasfsaf</p>
-      <p><input type="text" class="textArea" id="inputText"></p>
+      <p><input type="text" class="textArea" id="inputTextArea"></p>
     </div>
   </form>
 </div>
