--- a/src/siene/my/contact-us/contact-us.component.html
+++ b/src/siene/my/contact-us/contact-us.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-12 11:32:06
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-13 16:35:24
+ * @LastEditTime: 2021-10-13 16:44:34
 -->
 <div class="contactUsPage" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div [style.top]="pageTop+'px'">
@@ -24,7 +24,7 @@
       <div><app-popup-text-field [textData]="issueText" [text]="'Issue description'"></app-popup-text-field></div>
       <div [style.top]="pageOther+'px'"><app-popup-text-field [textData]="otherText" [text]="'Others:'"></app-popup-text-field></div>
       <div *ngFor="let item of radioBtn; let i = index;"  [style.top]="listItemOffsetY(i)+'px'">
-        <app-image-button [imgData]="item" (itemClick)="submit()" (itemClick)="radioClick(i)"></app-image-button>
+        <app-image-button [imgData]="item" (itemClick)="radioClick(i)"></app-image-button>
         <app-popup-text-field [textData]="issueItemText" [text]="issueList[i]"></app-popup-text-field>
       </div>
       <div [style.top]="pageTextArea+'px'">
