--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@
 	top: 50%;
 	margin-left: -375px;
 	overflow: hidden;
-	background-color:aquamarine;
+	background-color:#666;
 	user-select: none;
 	-webkit-user-select: none;
 }
