--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-14 15:46:36
+ * @LastEditTime: 2021-10-14 17:22:43
 -->
-<div class="banner" [@carousel]="carouselState">
+<div class="banner" [@carousel]="carouselState" #bannerEntity>
   <img [src]="item.art" class="bannerPic" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
 </div>
 <app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="activeIndex"></app-active-index-point>
-<app-touchDragBar *ngIf="showTouchBar" [rect]="touchBarRect" (itemClick)="bennerClick()"></app-touchDragBar>
+<app-touchDragBar *ngIf="showTouchBar" [rect]="touchBarRect" (itemClick)="bennerClick()" (dragState)="dargStatusChange($event)"></app-touchDragBar>
