--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-14 17:22:43
+ * @LastEditTime: 2021-10-15 11:26:48
 -->
-<div class="banner" [@carousel]="carouselState" #bannerEntity>
+<div class="banner" #bannerEntity>
   <img [src]="item.art" class="bannerPic" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
 </div>
 <app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="activeIndex"></app-active-index-point>
