--- a/src/basicUI/image-scale-button/image-scale-button.component.html
+++ b/src/basicUI/image-scale-button/image-scale-button.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-29 14:45:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-03 13:51:52
+ * @LastEditTime: 2021-10-19 16:10:53
 -->
 <div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick($event)" (mousedown)="onDown($event)" (touchstart)="onDown($event)"
  (mouseup)="onUp($event)" (mouseout)="onUp($event)" (touchend)="onUp($event)" (touchcancel)="onUp($event)">
-  <div class="imgIcon" [attr.style]="iconStyle" [@carousel]="carouselState"></div>
+  <div class="imgIcon" [attr.style]="iconStyle" #carousel></div>
 </div>
