--- a/src/siene/loading-and-po/popup-layer/popup-layer.component.html
+++ b/src/siene/loading-and-po/popup-layer/popup-layer.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-14 11:16:40
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-14 13:46:08
+ * @LastEditTime: 2021-10-19 16:49:42
 -->
-<div class="popupLayer" id="popupLayer" [@carousel]="carouselState">
+<div class="popupLayer" id="popupLayer" #carousel>
   <ng-template popupContainer></ng-template>
 </div>
