--- a/src/siene/video/control-bar/control-bar.component.html
+++ b/src/siene/video/control-bar/control-bar.component.html
@@ -4,17 +4,17 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-10 16:30:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 09:29:59
+ * @LastEditTime: 2021-10-20 17:44:44
 -->
 <div class="control_bar">
   <app-image [imgData]="controlBg"></app-image>
   <div class="productIconContainer">
     <img src="{{productImg}}" width="175" height="172">
   </div>
-  <app-image [imgData]="objectImgFrame"></app-image>
+  <app-image-scale-button [imgData]="objectImgFrame"></app-image-scale-button>
   <app-image-scale-button [imgData]="cameraBg" [buttonIcon]="cameraIcon" (itemClick)="toggle()" ></app-image-scale-button>
   <div *ngIf="!playing">
-    <app-image [imgData]="addCoin"></app-image>
+    <app-image-scale-button [imgData]="addCoin"></app-image-scale-button>
     <app-image [imgData]="chatIcon"></app-image>
     <app-image-scale-button [imgData]="playBtnBg" [buttonIcon]="playBtnIcon" (itemClick)="startPlay();"></app-image-scale-button>
     <app-image-scale-button [imgData]="occupiedBg" [buttonIcon]="occupiedIcon" [enabled]="false" *ngIf="occupied"></app-image-scale-button>
