--- a/src/siene/flying-coins/flying-coins.component.html
+++ b/src/siene/flying-coins/flying-coins.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-30 16:11:04
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-01 13:56:51
+ * @LastEditTime: 2021-10-21 13:25:39
 -->
-<div class="effectLayer" [style.height]="mainHeight+'px'">
+<div class="effectLayer noneSelect" [style.height]="mainHeight+'px'">
     <app-coin [movieClip]="item" *ngFor="let item of coinShowing"></app-coin>
 </div>
