--- a/src/service/ui/list-text-field/list-text-field.component.html
+++ b/src/service/ui/list-text-field/list-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-09 13:50:29
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 13:51:01
+ * @LastEditTime: 2021-10-21 13:24:38
 -->
-<div class="textField" [style]="divStyle">
+<div class="textField noneSelect" [style]="divStyle">
   <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
