--- a/src/service/ui/popup-text-field/popup-text-field.component.html
+++ b/src/service/ui/popup-text-field/popup-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-19 12:00:32
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 17:01:19
+ * @LastEditTime: 2021-10-21 13:25:20
 -->
-<div class="textField" [style]="divStyle">
+<div class="textField noneSelect" [style]="divStyle">
   <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
