--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-19 15:35:54
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-01 14:00:50
+ * @LastEditTime: 2021-10-21 13:53:58
 -->
-<div class="mainDiv" [attr.style]="matrix">
+<div class="mainDiv widthApp" [attr.style]="matrix">
     <app-dynamic-layer [mainHeight]="hSet"></app-dynamic-layer>
     <app-loading-and-po [mainHeight]="hSet"></app-loading-and-po>
     <app-flying-coins  [mainHeight]="hSet"></app-flying-coins>
