--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ div{
     -moz-user-select: none;
     pointer-events: none;
 }
+.widthApp{
+    width: 750px;
+}
 @font-face {
     font-family: 'luckiest';
     src: url('assets/fonts/Luckiest_Guy_regular.ttf');
