--- a/src/siene/my/contact-us/contact-us.component.html
+++ b/src/siene/my/contact-us/contact-us.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-12 11:32:06
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-20 16:42:20
+ * @LastEditTime: 2021-10-21 14:09:57
 -->
-<div class="contactUsPage" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
+<div class="contactUsPage widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div [style.top]="pageTop+'px'">
     <app-image [imgData]="title"></app-image>
     <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
