--- a/src/siene/shop/shop/shop.component.html
+++ b/src/siene/shop/shop/shop.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-24 13:55:29
+ * @LastEditTime: 2021-10-21 14:11:29
 -->
-<div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
-    <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
+<div class="bankContainer widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
+    <div class="listBg widthApp" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
     <div class="singleShop" *ngIf="showCoinShop">
         <app-image [imgData]="coinBg"></app-image>
         <app-image [imgData]="coinIcon"></app-image>
