--- a/src/siene/start-up/start-up.component.html
+++ b/src/siene/start-up/start-up.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-14 13:31:19
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 14:12:18
+ * @LastEditTime: 2021-10-21 14:28:38
 -->
-<div class="startUpPage widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/start_up/bg.png)'">
+<div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/start_up/bg.png)'">
     <div #startPageEntity class="startPageEntity">
         <div *ngFor="let item of tipPages; let i = index" [style.left]="750 * i + 'px'">
             <app-image [imgData]="item"></app-image>
