--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,11 @@ div{
 .widthApp{
     width: 750px;
 }
+.stretchingBg{
+    margin:0px;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+}
 @font-face {
     font-family: 'luckiest';
     src: url('assets/fonts/Luckiest_Guy_regular.ttf');
