--- a/src/siene/shop/vip-level-list/vip-level-list.component.html
+++ b/src/siene/shop/vip-level-list/vip-level-list.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-27 16:56:21
+ * @LastEditTime: 2021-10-21 15:04:44
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
@@ -17,7 +17,7 @@
       <app-image [imgData]="crown"></app-image>
     </div>
     <app-image [imgData]="hand"></app-image>
-    <div class="textShadow">
+    <div class="lightTextShadow">
       <app-popup-text-field [textData]="titleText" [text]="titleString"></app-popup-text-field>
     </div>
     <div class="tipText"></div>
