--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,13 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 17:42:23
+ * @LastEditTime: 2021-10-22 09:43:01
 -->
 <div class="videoFrameContainer">
     <iframe src="assets/video/video.html" height="{{iframeHeight}}" id="videoFrame" class="videoFrame widthApp" scrolling="no"></iframe>
 </div>
 <app-head-bar></app-head-bar>
-<app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
+<app-image-scale-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-scale-button>
 <div class="wyfi"></div>
 <app-image [imgData]="wyfiIcon"></app-image>
 <div class="playerHead"></div>
