--- a/src/pages/video/control-bar/control-bar.component.html
+++ b/src/pages/video/control-bar/control-bar.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-10 16:30:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-22 11:56:50
+ * @LastEditTime: 2021-10-25 11:37:24
 -->
 <div class="control_bar">
   <app-image [imgData]="controlBg"></app-image>
@@ -12,7 +12,7 @@
   <app-image-scale-button [imgData]="cameraBg" [buttonIcon]="cameraIcon" (itemClick)="toggle()" ></app-image-scale-button>
   <div *ngIf="!playing">
     <app-image-scale-button [imgData]="addCoin" (itemClick)="showOocPo()"></app-image-scale-button>
-    <app-image [imgData]="chatIcon"></app-image>
+    <app-image-scale-button [imgData]="historyBg" [buttonIcon]="historyBtn"></app-image-scale-button>
     <app-image-scale-button [imgData]="playBtnBg" [buttonIcon]="playBtnIcon" (itemClick)="startPlay();"></app-image-scale-button>
     <app-image-scale-button [imgData]="occupiedBg" [buttonIcon]="occupiedIcon" [enabled]="false" *ngIf="occupied"></app-image-scale-button>
   </div>
