--- a/src/pages/video/control-bar/play-button/play-button.component.html
+++ b/src/pages/video/control-bar/play-button/play-button.component.html
@@ -4,9 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-25 11:43:00
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-25 11:43:39
+ * @LastEditTime: 2021-10-25 13:34:03
 -->
 <div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick($event)" (mousedown)="onDown($event)" (touchstart)="onDown($event)"
- (mouseup)="onUp($event)" (mouseout)="onUp($event)" (touchend)="onUp($event)" (touchcancel)="onUp($event)" #carousel>
-  <div class="noneSelect" [attr.style]="iconStyle"></div>
+ (mouseup)="onUp($event)" (mouseout)="onUp($event)" (touchend)="onUp($event)" (touchcancel)="onUp($event)">
+  <div class="innerContainer" #carousel>
+    <div class="noneSelect" [attr.style]="iconStyle"></div>
+    <app-popup-text-field [textData]="playText" [text]="playString"></app-popup-text-field>
+    <app-image [imgData]="coinIcon"></app-image>
+  </div>
 </div>
