--- a/src/pages/video/control-bar/play-button/play-button.component.css
+++ b/src/pages/video/control-bar/play-button/play-button.component.css
@@ -6,3 +6,14 @@
     width: 286px;
     height: 261px;
 }
+.shadowBg{
+    left: 90px;
+    top: 160px;
+    background-color: black;
+    opacity: 0.5;
+    width: 140px;
+    height: 60px;
+    -moz-border-radius: 60px;
+    -webkit-border-radius: 60px;
+    border-radius: 60px;
+}
