--- a/src/pages/video/video/video.component.css
+++ b/src/pages/video/video/video.component.css
@@ -7,21 +7,20 @@
 }
 .playerHead{
   left: 645px;
-  top: 220px;
+  top: 130px;
   width: 83px;
-  height: 153px;
+  height: 133px;
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
   border-radius:25px;
-  background-color: black;
-  opacity: 0.7;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 .playingUser{
-  overflow: hidden;
+  position: absolute;
   width: 60px;
   height: 60px;
-  left: 655px;
-  top: 235px;
+  left: 11px;
+  top: 20px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius:10px;
